--- a/webapp/index.xhtml
+++ b/webapp/index.xhtml
@@ -35,7 +35,7 @@
                 <p:panel  style="background-color: lightgray">
                     <h:outputText value="Third Party" style="margin-bottom: 20px"/>
 
-                    <p:dataTable value="#{mobyBean.mobys}" var="moby" >
+                    <p:dataTable value="#{topTableBean.items}" var="moby" >
 
                         <p:column>
                             <h:outputText value="#{moby.name}" />
