--- a/webapp/index.xhtml
+++ b/webapp/index.xhtml
@@ -22,7 +22,7 @@
 
                 <p:panelGrid columns="2" layout="grid" >
                     <p:outputLabel for="type" value="Document Type* :" />
-                    <p:selectOneMenu id="type" style="width: 100%">
+                    <p:selectOneMenu id="type">
                         <f:selectItem itemLabel="Select One" />
                         <f:selectItem itemLabel="Type 1"/>
                         <f:selectItem itemLabel="Type 2"/>
